--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,4 +1,27 @@
-<div class="badge badge-secondary">
-    <h3>course-list works!</h3>
+<div class="container">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Code</th>
+                <th>Rating</th>
+                <th>Release Date</th>
+                <th>Options</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let course of courses">
+                <td>{{ course.imgUrl }}</td>
+                <td>{{ course.name }}</td>
+                <td>{{ course.price }}</td>
+                <td>{{ course.code }}</td>
+                <td>{{ course.rating }}</td>
+                <td>{{ course.releaseDate }}</td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
