--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -13,7 +13,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let course of courses">
-                <td>{{ course.imgUrl }}</td>
+                <td><img [src]="course.imgUrl" width="45" height="40"></td> <!--OS DOIS FUNCIONA <td><img src="{{ course.imgUrl }}" width="45" height="40"></td>-->
                 <td>{{ course.name }}</td>
                 <td>{{ course.price }}</td>
                 <td>{{ course.code }}</td>
