--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,3 +1,11 @@
+<h3>Course List</h3>
+<div class="form-grou row">
+    <label class="col-sm-2 col-form-lavel">Filter By</label>
+    <div class="col-sm-10">
+        <input [(ngModel)]="filter" class="form-control">
+    </div>
+</div>
+
 <div class="container">
     <table class="table table-striped">
         <thead>
@@ -12,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let course of courses">
+            <tr *ngFor="let course of filteredCourses">
                 <td><img [src]="course.imgUrl" width="45" height="40"></td> <!--OS DOIS FUNCIONA <td><img src="{{ course.imgUrl }}" width="45" height="40"></td>-->
                 <td>{{ course.name }}</td>
                 <td>{{ course.price }}</td>
